테스트 사진 추가 & 준혁이 파이썬 코드 옮기는중

--- a/CV_test1/CV_test1/CV_test1.vcxproj
+++ b/CV_test1/CV_test1/CV_test1.vcxproj
@@ -88,6 +88,7 @@
     <ClCompile Include="..\packages\OpenCV.2.4.10\build\native\include\opencv\cvcontour.cpp" />
     <ClCompile Include="..\packages\OpenCV.2.4.10\build\native\include\opencv\cvlabel.cpp" />
     <ClCompile Include="..\packages\OpenCV.2.4.10\build\native\include\opencv\cvtrack.cpp" />
+    <ClCompile Include="JH.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="기본 받기소스.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
